# MilestoneMind

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  eslint.base.mjs  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/app/create/: page.tsx
apps/web/src/components/: AmountPreview.tsx  AssessmentCard.tsx  DealCard.tsx  (+12 more)
docs/: architecture.md
programs/milestone_mind/: Cargo.toml
programs/milestone_mind/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/milestone_mind/src/instructions/: cancel_draft_deal.rs  create_deal.rs  create_milestone.rs  finalize_deal.rs  fund_deal.rs  initialize_platform.rs  mod.rs  open_dispute.rs  release_approved_funds.rs  resolve_dispute.rs  submit_assessment.rs  submit_evidence.rs
scripts/: bootstrap-mock-usdc.mjs  check-ai-health-route.mjs  create-demo-wallets.mjs  demo-e2e.ts  demo-utils.mjs  fund-demo-client.mjs  run-ai-service.mjs  run-local-validator.mjs  sync-anchor-idl.mjs
services/ai/: .env.example  requirements-dev.txt  requirements.txt
services/ai/app/: assessment_types.py  config.py  engine.py  knowledge_base.py  main.py  openai_layer.py  schemas.py
services/ai/tests/: test_assessment.py  test_health.py  test_openai_layer.py
services/executor/: .env.example  package.json
services/executor/src/: index.ts  server.ts
services/executor/tests/: executor.test.mjs  health.test.mjs
tests/: milestone-mind.test.mjs  milestone-mind.test.ts
(+38 files in other folders)
